index: fixed image being aligned at top when browser is narrow by editing CSS main

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2319,3 +2319,11 @@ button,
 		top: 0;
     padding-top: 0px;
 	} 
+
+
+  .top-align-image {
+    object-fit: cover;
+    object-position: top !important;
+    width: 100%;
+    height: auto;
+}
